--- a/weather-app/src/app/app.component.html
+++ b/weather-app/src/app/app.component.html
@@ -1,19 +1,38 @@
 <app-navbar></app-navbar>
 <div class="main-container" fxLayout="column">
-  <div class="main-content" fxLayout="column">
-    <div fxLayout="row" fxLayoutAlign="center center">
-      <mat-form-field fxFlex="50">
-        <input type="text" matInput [matAutocomplete]="auto" [formControl]="searchCtrl" placeholder="Enter postal code or city name to search">
-        <mat-icon matSuffix>search</mat-icon>
-        <mat-autocomplete #auto="matAutocomplete">
-          <mat-option *ngFor="let location of filteredLocations | async" [value]="location.name">
-            <span>{{location.name}}</span>
-          </mat-option>
-        </mat-autocomplete>
-      </mat-form-field>
+    <div class="main-content" fxLayout="column">
+        <mat-card>
+            <mat-card-content fxLayout="row" fxLayoutAlign="center center">
+                <mat-form-field fxFlex="50" class="search-bar">
+                    <input type="text" matInput [matAutocomplete]="auto" [formControl]="searchCtrl" placeholder="Enter postal code or city name to search">
+                    <mat-progress-spinner *ngIf="isSearching" class="search-progress" color="primary" mode="indeterminate" matSuffix>
+                    </mat-progress-spinner>
+                    <mat-icon matSuffix>search</mat-icon>
+                    <mat-autocomplete #auto="matAutocomplete" (optionSelected)="selectCity($event)" [autoActiveFirstOption]="true">
+                        <mat-option *ngFor="let location of filteredLocations | async" [value]="location.name">
+                            <span>{{location.name}}</span>
+                        </mat-option>
+                    </mat-autocomplete>
+                </mat-form-field>
+            </mat-card-content>
+        </mat-card>
+        <mat-card>
+            <mat-tab-group>
+                <mat-tab label="Today">
+                    <div class="tab-container" fxLayout="row">
+                        <app-weather-widget [forecastDay]="forecastDay"></app-weather-widget>
+                    </div>
+                </mat-tab>
+                <mat-tab label="Extended Forecast">
+
+                </mat-tab>
+                <mat-tab label="Month">
+
+                </mat-tab>
+            </mat-tab-group>
+        </mat-card>
     </div>
-  </div>
-  <div class="footer-container">
-    <app-footer></app-footer>
-  </div>
+    <div class="footer-container">
+        <app-footer></app-footer>
+    </div>
 </div>
